--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "abhishekdewan.com.androidtemplate"
+        applicationId "com.abhishek.androidtemplate"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
@@ -17,55 +18,48 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
-
     //Support libraries
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
-
     //Android Architecture LifeCycle
     implementation 'android.arch.lifecycle:runtime:1.0.3'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
-
     //Android LiveData
     implementation 'android.arch.lifecycle:extensions:1.0.0'
     compile 'android.arch.lifecycle:extensions:1.0.0'
     annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
-
     //Room
     implementation 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-
     //Dagger2
     compile 'com.google.dagger:dagger-android:2.11'
     compile 'com.google.dagger:dagger-android-support:2.11'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
-
     // if you use the support libraries
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
-
     //Glide
     compile 'com.github.bumptech.glide:glide:4.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
-
     //Timber
     implementation 'com.jakewharton.timber:timber:4.6.0'
-
     //Retrofit
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-
     //RxAndroid And RxJava2
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
-
+    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     //Butterknife
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
 }
